# sphinxcontrib-pyscript

./: .buildinfo  README.rst  index.html  objects.inv  pyproject.toml  searchindex.js
.github/workflows/: main.yml  pages.yml  release.yml
_sources/: index.rst.txt
_sources/demo/: janome.rst.txt
demo/: index.html
demo/janome/: index.html
demo/repl/: index.html
directives/: index.html
doc/: conf.py  demo.rst  directives.rst  index.rst
doc/demo/: repl.rst
genindex/: index.html
search/: index.html
sphinxcontrib/: pyscript.py
tests/: test_it.py
tests/test-root/: conf.py  index.rst  repl-no-env.rst  repl-with-env.rst
