[tool.poetry]
name = "sphinxcontrib-pyscript"
version = "0.1.0"
description = "Embed PyScript components into Sphinx documentation"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"
packages = [
    { include = "sphinxcontrib" },
]

[tool.poetry.dependencies]
python = "^3.7 | ^3.8 | ^3.9 | ^3.10"
Sphinx = "*"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
typing-extensions = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
